add send weather info to pebble

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "watchapp": {
       "watchface": true
     },
+    "capabilities": [
+      "location"
+    ],
     "messageKeys": [
-      "dummy"
+      "TEMPERATURE",
+      "CONDITIONS",
     ],
     "resources": {
       "media": []
